catrobatLanguage/src/org/catrobat/parser/CatrobatScriptParser.java
// Generated from D:\Users\TDiva\Desktop\GSoC-2013\CatrobatLanguage\CatrobatGrammar\CatrobatScript.g4 by ANTLR 4.0
package org.catrobat.parser;

import java.util.HashMap;
import java.util.Map;
import java.util.List;
import java.util.ArrayList;
import java.util.Stack;

import org.catrobat.catroid.common.LookData;
import org.catrobat.catroid.common.SoundInfo;
import org.catrobat.catroid.content.BroadcastScript;
import org.catrobat.catroid.content.Script;
import org.catrobat.catroid.content.Sprite;
import org.catrobat.catroid.content.StartScript;
import org.catrobat.catroid.content.WhenScript;
import org.catrobat.catroid.content.bricks.Brick;
import org.catrobat.catroid.content.bricks.BrickBaseType;
import org.catrobat.catroid.content.bricks.BroadcastBrick;
import org.catrobat.catroid.content.bricks.BroadcastWaitBrick;
import org.catrobat.catroid.content.bricks.ChangeBrightnessByNBrick;
import org.catrobat.catroid.content.bricks.ChangeGhostEffectByNBrick;
import org.catrobat.catroid.content.bricks.ChangeSizeByNBrick;
import org.catrobat.catroid.content.bricks.ChangeVariableBrick;
import org.catrobat.catroid.content.bricks.ChangeVolumeByNBrick;
import org.catrobat.catroid.content.bricks.ChangeXByNBrick;
import org.catrobat.catroid.content.bricks.ChangeYByNBrick;
import org.catrobat.catroid.content.bricks.ClearGraphicEffectBrick;
import org.catrobat.catroid.content.bricks.ComeToFrontBrick;
import org.catrobat.catroid.content.bricks.ForeverBrick;
import org.catrobat.catroid.content.bricks.GlideToBrick;
import org.catrobat.catroid.content.bricks.GoNStepsBackBrick;
import org.catrobat.catroid.content.bricks.HideBrick;
import org.catrobat.catroid.content.bricks.IfLogicBeginBrick;
import org.catrobat.catroid.content.bricks.IfLogicElseBrick;
import org.catrobat.catroid.content.bricks.IfLogicEndBrick;
import org.catrobat.catroid.content.bricks.IfOnEdgeBounceBrick;
import org.catrobat.catroid.content.bricks.LegoNxtMotorActionBrick;
import org.catrobat.catroid.content.bricks.LegoNxtMotorStopBrick;
import org.catrobat.catroid.content.bricks.LegoNxtMotorTurnAngleBrick;
import org.catrobat.catroid.content.bricks.LegoNxtPlayToneBrick;
import org.catrobat.catroid.content.bricks.LoopBeginBrick;
import org.catrobat.catroid.content.bricks.LoopEndBrick;
import org.catrobat.catroid.content.bricks.LoopEndlessBrick;
import org.catrobat.catroid.content.bricks.MoveNStepsBrick;
import org.catrobat.catroid.content.bricks.NestingBrick;
import org.catrobat.catroid.content.bricks.NextLookBrick;
import org.catrobat.catroid.content.bricks.NoteBrick;
import org.catrobat.catroid.content.bricks.PlaceAtBrick;
import org.catrobat.catroid.content.bricks.PlaySoundBrick;
import org.catrobat.catroid.content.bricks.PointInDirectionBrick;
import org.catrobat.catroid.content.bricks.PointToBrick;
import org.catrobat.catroid.content.bricks.RepeatBrick;
import org.catrobat.catroid.content.bricks.SetBrightnessBrick;
import org.catrobat.catroid.content.bricks.SetGhostEffectBrick;
import org.catrobat.catroid.content.bricks.SetLookBrick;
import org.catrobat.catroid.content.bricks.SetSizeToBrick;
import org.catrobat.catroid.content.bricks.SetVariableBrick;
import org.catrobat.catroid.content.bricks.SetVolumeToBrick;
import org.catrobat.catroid.content.bricks.SetXBrick;
import org.catrobat.catroid.content.bricks.SetYBrick;
import org.catrobat.catroid.content.bricks.ShowBrick;
import org.catrobat.catroid.content.bricks.SpeakBrick;
import org.catrobat.catroid.content.bricks.StopAllSoundsBrick;
import org.catrobat.catroid.content.bricks.TurnLeftBrick;
import org.catrobat.catroid.content.bricks.TurnRightBrick;
import org.catrobat.catroid.content.bricks.WaitBrick;
import org.catrobat.catroid.formulaeditor.Formula;
import org.catrobat.catroid.formulaeditor.Functions;
import org.catrobat.catroid.formulaeditor.InternFormulaParser;
import org.catrobat.catroid.formulaeditor.InternToken;
import org.catrobat.catroid.formulaeditor.InternTokenType;
import org.catrobat.catroid.formulaeditor.Operators;
import org.catrobat.catroid.formulaeditor.Sensors;
import org.catrobat.catroid.formulaeditor.UserVariable;
         
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CatrobatScriptParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__75=1, T__74=2, T__73=3, T__72=4, T__71=5, T__70=6, T__69=7, T__68=8, 
		T__67=9, T__66=10, T__65=11, T__64=12, T__63=13, T__62=14, T__61=15, T__60=16, 
		T__59=17, T__58=18, T__57=19, T__56=20, T__55=21, T__54=22, T__53=23, 
		T__52=24, T__51=25, T__50=26, T__49=27, T__48=28, T__47=29, T__46=30, 
		T__45=31, T__44=32, T__43=33, T__42=34, T__41=35, T__40=36, T__39=37, 
		T__38=38, T__37=39, T__36=40, T__35=41, T__34=42, T__33=43, T__32=44, 
		T__31=45, T__30=46, T__29=47, T__28=48, T__27=49, T__26=50, T__25=51, 
		T__24=52, T__23=53, T__22=54, T__21=55, T__20=56, T__19=57, T__18=58, 
		T__17=59, T__16=60, T__15=61, T__14=62, T__13=63, T__12=64, T__11=65, 
		T__10=66, T__9=67, T__8=68, T__7=69, T__6=70, T__5=71, T__4=72, T__3=73, 
		T__2=74, T__1=75, T__0=76, USER_VARIABLE=77, NUMBER=78, FUNCTION_NAME=79, 
		OPERATOR=80, SENSOR=81, BRACKET_OPEN=82, BRACKET_CLOSE=83, FUNCTION_PARAMETER_DELIMITER=84, 
		ACTION=85, WS=86;
	public static final String[] tokenNames = {
		"<INVALID>", "'left'", "'stop'", "'Y:'", "'X:'", "'to'", "'I'", "'by'", 
		"'size'", "'sound'", "'next'", "'brightness'", "'%'", "'variable'", "'on'", 
		"'turn'", "'glide'", "'seconds'", "'X'", "'duration:'", "'steps'", "'place'", 
		"'repeat'", "'started'", "'effect'", "'at'", "'back'", "'broadcast'", 
		"'when'", "'direction'", "'edge'", "'move'", "'look'", "'hide'", "'degrees'", 
		"'forever'", "'in'", "'of'", "'receive'", "'if'", "'note'", "'program'", 
		"'change'", "'volume'", "'Y'", "'bounce'", "'set'", "'all'", "'wait'", 
		"'and'", "'speed'", "'else'", "'sounds'", "'motor'", "'true'", "'go'", 
		"'effects'", "'tone'", "'is'", "'NXT'", "'loop'", "'clear'", "'layers'", 
		"'frequency:'", "'ghost'", "'start'", "'come'", "'show'", "'speak'", "'front'", 
		"'right'", "'then'", "'play'", "'switch'", "'graphic'", "'end'", "'point'", 
		"USER_VARIABLE", "NUMBER", "FUNCTION_NAME", "OPERATOR", "SENSOR", "'('", 
		"')'", "','", "'Tapped'", "WS"
	};
	public static final int
		RULE_program = 0, RULE_startScript = 1, RULE_whenScript = 2, RULE_broadcastScript = 3, 
		RULE_brickList = 4, RULE_brick = 5, RULE_broadcastBrick = 6, RULE_broadcastWaitBrick = 7, 
		RULE_changeBrightnessByNBrick = 8, RULE_changeGhostEffectByNBrick = 9, 
		RULE_changeSizeByNBrick = 10, RULE_changeVariableBrick = 11, RULE_changeVolumeByNBrick = 12, 
		RULE_changeXByNBrick = 13, RULE_changeYByNBrick = 14, RULE_clearGraficEffectBrick = 15, 
		RULE_comeToFrontBrick = 16, RULE_foreverBrick = 17, RULE_glideToBrick = 18, 
		RULE_goNStepsBackBrick = 19, RULE_hideBrick = 20, RULE_ifLogicBeginBrick = 21, 
		RULE_ifLogicElseBrick = 22, RULE_ifLogicEndBrick = 23, RULE_ifOnEdgeBounceBrick = 24, 
		RULE_legoNXTMotorActionBrick = 25, RULE_legoNxtMotorStopBrick = 26, RULE_legoNxtMotorTurnAngleBrick = 27, 
		RULE_legoNxtPlayToneBrick = 28, RULE_loopEndBrick = 29, RULE_moveNStepsBrick = 30, 
		RULE_nextLookBrick = 31, RULE_noteBrick = 32, RULE_placeAtBrick = 33, 
		RULE_playSoundBrick = 34, RULE_pointInDirectionBrick = 35, RULE_pointToBrick = 36, 
		RULE_repeatBrick = 37, RULE_setBrightnessBrick = 38, RULE_setGhostEffectBrick = 39, 
		RULE_setLookBrick = 40, RULE_setSizeToBrick = 41, RULE_setVariableBrick = 42, 
		RULE_setVolumeToBrick = 43, RULE_setXBrick = 44, RULE_setYBrick = 45, 
		RULE_showBrick = 46, RULE_speakBrick = 47, RULE_stopAllSoundsBrick = 48, 
		RULE_turnLeftBrick = 49, RULE_turnRightBrick = 50, RULE_waitBrick = 51, 
		RULE_action = 52, RULE_formula = 53, RULE_look = 54, RULE_sound = 55, 
		RULE_objectName = 56, RULE_message = 57, RULE_motor = 58, RULE_textField = 59, 
		RULE_userVariable = 60, RULE_token = 61;
	public static final String[] ruleNames = {
		"program", "startScript", "whenScript", "broadcastScript", "brickList", 
		"brick", "broadcastBrick", "broadcastWaitBrick", "changeBrightnessByNBrick", 
		"changeGhostEffectByNBrick", "changeSizeByNBrick", "changeVariableBrick", 
		"changeVolumeByNBrick", "changeXByNBrick", "changeYByNBrick", "clearGraficEffectBrick", 
		"comeToFrontBrick", "foreverBrick", "glideToBrick", "goNStepsBackBrick", 
		"hideBrick", "ifLogicBeginBrick", "ifLogicElseBrick", "ifLogicEndBrick", 
		"ifOnEdgeBounceBrick", "legoNXTMotorActionBrick", "legoNxtMotorStopBrick", 
		"legoNxtMotorTurnAngleBrick", "legoNxtPlayToneBrick", "loopEndBrick", 
		"moveNStepsBrick", "nextLookBrick", "noteBrick", "placeAtBrick", "playSoundBrick", 
		"pointInDirectionBrick", "pointToBrick", "repeatBrick", "setBrightnessBrick", 
		"setGhostEffectBrick", "setLookBrick", "setSizeToBrick", "setVariableBrick", 
		"setVolumeToBrick", "setXBrick", "setYBrick", "showBrick", "speakBrick", 
		"stopAllSoundsBrick", "turnLeftBrick", "turnRightBrick", "waitBrick", 
		"action", "formula", "look", "sound", "objectName", "message", "motor", 
		"textField", "userVariable", "token"
	};

	@Override
	public String getGrammarFileName() { return "CatrobatScript.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	 
	private Map<String,UserVariable> variables = new HashMap<String,UserVariable>();

	public List<UserVariable> getVariables() {
	   return new ArrayList<UserVariable>(variables.values());
	}

	private Map<String, UserVariable> programVariables;

	public void setProgramVariables(List<UserVariable> list) {
	   programVariables = new HashMap<String, UserVariable>();                                                          
	   for (UserVariable item: list) {
	     programVariables.put(item.getName(), item);                             
	   }
	}

	private List<Script> scriptList;

	public List<Script> getScriptList() {
	   return scriptList;
	}

	private Sprite currentSprite;

	// TODO: set current Sprite
	public void setCurrentSprite(Sprite sprite) {
	  currentSprite = sprite;
	}

	private List<Sprite> spriteList;

	// TODO: set SpriteList
	public void setSpriteList(List<Sprite> spriteList) {
	  this.spriteList = spriteList;
	}

		private void changeBrick(Script script, Brick oldBrick, Brick newBrick) {
			int index = script.getBrickList().indexOf(oldBrick);
			script.getBrickList().remove(oldBrick);
			script.getBrickList().add(index, newBrick);
		}

		private void setAllInnerBricks() {
			for (Script script : scriptList) {
				Stack<Brick> stack = new Stack<Brick>();
				for (int i=0; i<script.getBrickList().size(); i++) {
					Brick item = script.getBrickList().get(i);
					if (item instanceof NestingBrick) {
						if (item instanceof IfLogicEndBrick) {
							if (stack.peek() instanceof IfLogicBeginBrick) {
								// TODO: if - end
								System.out.println("if-end");
							} else if (stack.peek() instanceof IfLogicElseBrick) {
								Brick elseBrick = stack.pop();

								if (!(stack.peek() instanceof IfLogicBeginBrick)) {
									// TODO: exception with nesting
									System.out.println("exception");
								}
								Brick ifBrick = stack.pop();
								setConditionReferences(item, elseBrick, ifBrick);
							}
						} else if (item instanceof LoopEndBrick) {
							if (stack.peek() instanceof LoopBeginBrick) {
								Brick beginBrick = stack.pop();
								if (beginBrick instanceof ForeverBrick) {
									Brick oldItem = item;
									item = new LoopEndlessBrick();
									changeBrick(script, oldItem, item);
								}
								setLoopReferences(item, beginBrick);
							} else {
								// TODO: exception
								System.out.println("exception");
							}
						} else {
							stack.push(item);
						}
					}
				}
				if (!stack.isEmpty()) {
					// TODO: exception
					System.out.println("exeption");
				}
			}
		}

		private void setConditionReferences(Brick item, Brick elseBrick,
				Brick ifBrick) {
			((IfLogicBeginBrick) ifBrick)
					.setIfElseBrick((IfLogicElseBrick) elseBrick);
			((IfLogicBeginBrick) ifBrick)
					.setIfEndBrick((IfLogicEndBrick) item);

			((IfLogicElseBrick) elseBrick)
					.setIfBeginBrick((IfLogicBeginBrick) ifBrick);
			((IfLogicElseBrick) elseBrick)
					.setIfEndBrick((IfLogicEndBrick) item);

			((IfLogicEndBrick) item)
					.setIfBeginBrick((IfLogicBeginBrick) ifBrick);
			((IfLogicEndBrick) item)
					.setIfElseBrick((IfLogicElseBrick) elseBrick);
		}

		private void setLoopReferences(Brick item, Brick beginBrick) {
			((LoopBeginBrick) beginBrick)
					.setLoopEndBrick((LoopEndBrick) item);
			((LoopEndBrick) item)
					.setLoopBeginBrick((LoopBeginBrick) beginBrick);
		}


	public CatrobatScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public StartScriptContext startScript;
		public WhenScriptContext whenScript;
		public BroadcastScriptContext broadcastScript;
		public List<StartScriptContext> startScript() {
			return getRuleContexts(StartScriptContext.class);
		}
		public WhenScriptContext whenScript(int i) {
			return getRuleContext(WhenScriptContext.class,i);
		}
		public List<WhenScriptContext> whenScript() {
			return getRuleContexts(WhenScriptContext.class);
		}
		public List<BroadcastScriptContext> broadcastScript() {
			return getRuleContexts(BroadcastScriptContext.class);
		}
		public BroadcastScriptContext broadcastScript(int i) {
			return getRuleContext(BroadcastScriptContext.class,i);
		}
		public StartScriptContext startScript(int i) {
			return getRuleContext(StartScriptContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		scriptList = new ArrayList<Script>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==28) {
				{
				setState(133);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(124); ((ProgramContext)_localctx).startScript = startScript();
					scriptList.add(((ProgramContext)_localctx).startScript.value);
					}
					break;

				case 2:
					{
					setState(127); ((ProgramContext)_localctx).whenScript = whenScript();
					scriptList.add(((ProgramContext)_localctx).whenScript.value);
					}
					break;

				case 3:
					{
					setState(130); ((ProgramContext)_localctx).broadcastScript = broadcastScript();
					scriptList.add(((ProgramContext)_localctx).broadcastScript.value);
					}
					break;
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			 setAllInnerBricks();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartScriptContext extends ParserRuleContext {
		public Script value;
		public BrickListContext brickList;
		public BrickListContext brickList() {
			return getRuleContext(BrickListContext.class,0);
		}
		public StartScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).enterStartScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).exitStartScript(this);
		}
	}

	public final StartScriptContext startScript() throws RecognitionException {
		StartScriptContext _localctx = new StartScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startScript);
		StartScript script = new StartScript();
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(138); match(28);
			setState(139); match(41);
			setState(140); match(23);
			}
			setState(142); ((StartScriptContext)_localctx).brickList = brickList();
			script.setBrickList(((StartScriptContext)_localctx).brickList.value);
			       script.setObject(currentSprite);
			}
			((StartScriptContext)_localctx).value =  script;
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenScriptContext extends ParserRuleContext {
		public Script value;
		public ActionContext action;
		public BrickListContext brickList;
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public BrickListContext brickList() {
			return getRuleContext(BrickListContext.class,0);
		}
		public WhenScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).enterWhenScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).exitWhenScript(this);
		}
	}

	public final WhenScriptContext whenScript() throws RecognitionException {
		WhenScriptContext _localctx = new WhenScriptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_whenScript);
		WhenScript script = new WhenScript();
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(145); match(28);
			setState(146); ((WhenScriptContext)_localctx).action = action();
			}
			setState(148); ((WhenScriptContext)_localctx).brickList = brickList();
			script.setAction(((WhenScriptContext)_localctx).action.value);
			       script.setBrickList(((WhenScriptContext)_localctx).brickList.value);
			       script.setObject(currentSprite);
			}
			((WhenScriptContext)_localctx).value =  script;
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BroadcastScriptContext extends ParserRuleContext {
		public Script value;
		public MessageContext message;
		public BrickListContext brickList;
		public MessageContext message() {
			return getRuleContext(MessageContext.class,0);
		}
		public BrickListContext brickList() {
			return getRuleContext(BrickListContext.class,0);
		}
		public BroadcastScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_broadcastScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).enterBroadcastScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).exitBroadcastScript(this);
		}
	}

	public final BroadcastScriptContext broadcastScript() throws RecognitionException {
		BroadcastScriptContext _localctx = new BroadcastScriptContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_broadcastScript);
		BroadcastScript script = new BroadcastScript();
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(151); match(28);
			setState(152); match(6);
			setState(153); match(38);
			setState(154); ((BroadcastScriptContext)_localctx).message = message();
			}
			setState(156); ((BroadcastScriptContext)_localctx).brickList = brickList();
			script.setReceivedMessage(((BroadcastScriptContext)_localctx).message.value);
			       script.setBrickList(((BroadcastScriptContext)_localctx).brickList.value);
			       script.setObject(currentSprite);
			}
			((BroadcastScriptContext)_localctx).value =  script;
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BrickListContext extends ParserRuleContext {
		public ArrayList<Brick> value;
		public BrickContext brick;
		public BrickContext brick(int i) {
			return getRuleContext(BrickContext.class,i);
		}
		public List<BrickContext> brick() {
			return getRuleContexts(BrickContext.class);
		}
		public BrickListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brickList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).enterBrickList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CatrobatScriptListener ) ((CatrobatScriptListener)listener).exitBrickList(this);
		}
	}

	public final BrickListContext brickList() throws RecognitionException {
		BrickListContext _localctx = new BrickListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_brickList);
		 ArrayList<Brick> brickList = new ArrayList<Brick>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 10) | (1L << 15) | (1L << 16) | (1L << 21) | (1L << 22) | (1L << 27) | (1L << 31) | (1L << 33) | (1L << 35) | (1L << 39) | (1L << 40) | (1L << 42) | (1L << 46) | (1L << 48) | (1L << 51) | (1L << 55) | (1L << 59) | (1L << 61))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (65 - 65)) | (1L << (66 - 65)) | (1L << (67 - 65)) | (1L << (68 - 65)) | (1L << (73 - 65)) | (1L << (75 - 65)) | (1L << (76 - 65)))) != 0)) {
				{
				{
				setState(159); ((BrickListContext)_localctx).brick = brick();
				brickList.add(((BrickListContext)_localctx).brick.value);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			((BrickListContext)_localctx).value =  brickList;
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
